# filewipe

mywipe/: filewipe.cpp  filewipe.h  makefile
wipe-2.3.1/: Makefile.in  blkdev.c  blkdev.h  config.h.in  configure  configure.in  debug.h  dir.c  dir.h  file.c  file.h  header.h  io.c  io.h  lock.c  lock.h  main.c  main.h  mt.c  mt.h  percent.c  percent.h  prompt.c  prompt.h  rand.c  rand.h  require.h  std.h  str.c  str.h  text.c  text.h  version.h  wipe.1  wipe.c  wipe.h  wipe.spec
